--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -5,7 +5,17 @@
     --vp-button-brand-bg: #28659d;
     --vp-button-brand-hover-bg: #3481d0;
 
-    --c-punisment: #ff6900;
-    --c-punishment-abuse: #fb2c36;
-    --c-punishment-focus: #c9bb77;
+    --c-danger: #fb2c36;
+    --c-warning: #ff6900;
+    --c-notification: #c9bb77;
+    --c-success: #00c950;
+}
+
+.price-tag {
+    font-size: 1.75rem;
+    color: var(--vp-c-brand-1)
+}
+
+img {
+    border-radius: 4px;
 }
